2001-12-06  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (set_root_pixmap): Don't try to grab the X window if
	we are just setting the window property back to the same value
	(set_root_pixmap): Don't grab pixmap_id if pixmap is NULL
	(set_root_pixmap): Initialize pixmap_id in the other case

2001-11-16  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Remove $(oaf_DATA).in

2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am ($(oaffile)): Make creation of the .oaf file generic

	* applier.c (render_to_screen): Use standard gdk and gdk_pixbuf
	rather than xlib and gdk_pixbuf_xlib
	(make_root_pixmap): Create a GdkPixmap
	(set_root_pixmap): Accept GdkPixmap and convert to X id

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (preferences_load_from_bonobo_db):
	(preferences_load_from_bonobo_pbag): Use BONOBO_RET_EX rather than
	RETURN_IF_EX; remove the definition of the latter macro

	* applier.c (fill_gradient): Copied from control center 1.4.0
	(render_background): Create the pixbuf first and then pass to
	fill_gradient
	(render_to_screen): Use XLIB_RGB_DITHER_MAX rather than
	GDK_RGB_DITHER_NORMAL

	* Makefile.am: Change the binary name to
	background-properties-control and create a wrapper script from
	../common/wrapper-script.in to be named
	background-properties-capplet
	Remove support for disabling bonobo-conf build

2001-09-22  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (run_render_pipeline): Create the root pixmap after we
	know about the gradient geometry
	(place_pixbuf):
	(tile_pixbuf): Fix calls to gdk_pixbuf_composite[_color]
	(render_wallpaper): Fix setting of pixbuf_xlate
	(render_background): Fix pixbuf_render_geom here in case the
	gradient geometry is small

2001-09-21  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c: Total reorganization

2001-09-17  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (preferences_save): Move from