@@ -1,3 +1,8 @@
+2002-02-14  Richard Hestilow  <hestilow@ximian.com>
+
+	* background-properties-capplet.c: Change configuration
+	key prefix to CAPPLET_CONFIG_PREFIX/background-properties.
+	
 2001-12-06  Bradford Hovinen  <hovinen@ximian.com>
 
 	* applier.c (set_root_pixmap): Don't try to grab the X window if
